--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,6 +14,11 @@ jobs:
     - name: Checkout Project
       uses: actions/checkout@v3
 
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
       with:
