--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,6 +23,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: "~> 1.5"
+        terraform_wrapper: false
 
     - name: Test Project
       run: make test
