--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,5 +25,11 @@ jobs:
         terraform_version: '1.5.7'
         terraform_wrapper: false
 
+    - name: Check documentation
+      uses: terraform-docs/gh-actions@v1.0.0
+      with:
+        output_method: print
+        working-dir: .
+
     - name: Test Project
       run: make test
