--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Check documentation
       uses: terraform-docs/gh-actions@v1.0.0
       with:
-        output_method: print
+        output-method: print
         working-dir: .
 
     - name: Test Project
